--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,9 @@
 {
   "name": "myApp",
   "integrations": {
-    "capacitor": {},
+    "capacitor": {
+      "enabled": false
+    },
     "cordova": {}
   },
   "type": "angular"
