--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/resource-timegrid": "^5.10.1",
+    "@fullcalendar/resource-timeline": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/http": "^5.33.0",
     "@ionic/angular": "^5.5.2",
