--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "list-files-in-dir": "^0.1.5",
     "moment": "^2.29.1",
     "ngx-color-picker": "^11.0.0",
+    "postcss": "^8.4.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -61,7 +62,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "cordova-ios": "6.2.0",
+    "cordova-ios": "^6.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
